@@ -38,6 +38,12 @@
 <p>2015-03-28  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>magick/widget.c (XEditText): Silence Coverity 10072 &quot;Overlapping
+buffer in memory copy&quot;</li>
+<li>coders/locale.c (ReadConfigureFile): Silence Coverity 10075
+&quot;Overlapping buffer in memory copy&quot;.</li>
+<li>magick/xwindow.c (MagickXMakeWindow): Silence Coverity 10076
+&quot;Overlapping buffer in memory copy&quot;.</li>
 <li>coders/dcm.c (funcDCM_TransferSyntax): Silence Coverity 10083
 &quot;Unchecked return value&quot;.</li>
 <li>magick/static.c (ExecuteStaticModuleProcess): Silence Coverity
